DI-2077: Primary key on queue and queue_error - for pg-logical